force-app/main/default/objects/Conta_bancaria__c/Conta_bancaria__c.object-meta.xml
<CustomObject>
    <label>Conta bancaria</label>
    <nameField>
        <displayFormat>BC-{00000}</displayFormat>
        <label>Nome de Conta bancaria</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contas bancarias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>