force-app/main/default/objects/Conta_bancaria__c/fields/Agencia__c.field-meta.xml
<CustomField>
    <fullName>Agencia__c</fullName>
    <description>Digite sua Agencia.</description>
    <inlineHelpText>Digite sua Agencia.</inlineHelpText>
    <label>Agencia</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>