force-app/main/default/objects/Conta_bancaria__c/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <description>Selecione o banco.</description>
    <inlineHelpText>Selecione o banco.</inlineHelpText>
    <label>Banco</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Banco do Brasil</fullName>
            </value>
            <value>
                <fullName>C6 Bank</fullName>
            </value>
            <value>
                <fullName>Digio</fullName>
            </value>
            <value>
                <fullName>Inter</fullName>
            </value>
            <value>
                <fullName>Itau</fullName>
            </value>
            <value>
                <fullName>Nubank</fullName>
            </value>
            <value>
                <fullName>Sicoob</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>