force-app/main/default/objects/Conta_bancaria__c/fields/BanksCount__c.field-meta.xml
<CustomField>
    <fullName>BanksCount__c</fullName>
    <label>Contato</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contas bancarias</relationshipLabel>
    <relationshipName>Contas_bancarias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>