force-app/main/default/objects/Conta_bancaria__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <description>Digite sua Conta</description>
    <inlineHelpText>Digite sua Conta</inlineHelpText>
    <label>Conta</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>