force-app/main/default/objects/Conta_bancaria__c/fields/Forma_de_Contato__c.field-meta.xml
<CustomField>
    <fullName>Forma_de_Contato__c</fullName>
    <label>Forma de Contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Telefone do gerente</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>