force-app/main/default/objects/Conta_bancaria__c/fields/limite_cartao__c.field-meta.xml
<CustomField>
    <fullName>limite_cartao__c</fullName>
    <label>limite_cartao</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>