force-app/main/default/objects/Conta_bancaria__c/recordTypes/Tradicional.recordType-meta.xml
<RecordType>
    <fullName>Tradicional</fullName>
    <active>true</active>
    <label>Tradicional</label>
</RecordType>